[*] Add global errors

--- a/src/client/styles/variables.pcss
+++ b/src/client/styles/variables.pcss
@@ -1,5 +1,6 @@
 :root {
   --white: #fff;
+  --black: #000;
   --grey-50: #fafafa;
   --grey-100: #f5f5f5;
   --grey-200: #eee;
@@ -40,6 +41,16 @@
   --red-700: #d32f2f;
   --red-800: #c62828;
   --red-900: #b71c1c;
+  --orange-50: #fff3e0;
+  --orange-100: #ffe0b2;
+  --orange-200: #ffcc80;
+  --orange-300: #ffb74d;
+  --orange-400: #ffa726;
+  --orange-500: #ff9800;
+  --orange-600: #fb8c00;
+  --orange-700: #f57c00;
+  --orange-800: #ef6c00;
+  --orange-900: #e65100;
   --border-radius-300: 2px;
   --border-radius-400: 3px;
   --border-radius-500: 4px;
