[*] Add stylelint and prettier

--- a/src/client/components/common/button/button.styles.pcss
+++ b/src/client/components/common/button/button.styles.pcss
@@ -4,7 +4,7 @@
   display: inline-block;
   border-radius: var(--border-radius-500);
   padding: var(--distance-500) var(--distance-600);
-  transition: all .5s;
+  transition: all 0.5s;
   color: var(--white);
   cursor: pointer;
   text-transform: uppercase;
