--- a/src/client/components/layout/components/header.styles.pcss
+++ b/src/client/components/layout/components/header.styles.pcss
@@ -1,7 +1,7 @@
 @import 'variables.pcss';
 
 .header {
-  background-color: #1976D2;
+  background-color: #1976d2;
   color: var(--white);
   padding: 20px;
   display: flex;
