--- a/src/client/styles/variables.pcss
+++ b/src/client/styles/variables.pcss
@@ -1,54 +1,48 @@
 :root {
-  --white: #ffffff;
-
-  --grey-50: #FAFAFA;
-  --grey-100: #F5F5F5;
-  --grey-200: #EEEEEE;
-  --grey-300: #E0E0E0;
-  --grey-400: #BDBDBD;
-  --grey-500: #9E9E9E;
+  --white: #fff;
+  --grey-50: #fafafa;
+  --grey-100: #f5f5f5;
+  --grey-200: #eee;
+  --grey-300: #e0e0e0;
+  --grey-400: #bdbdbd;
+  --grey-500: #9e9e9e;
   --grey-600: #757575;
   --grey-700: #616161;
   --grey-800: #424242;
   --grey-900: #212121;
-
-  --blue-50: #E3F2FD;
-  --blue-100: #BBDEFB;
-  --blue-200: #90CAF9;
-  --blue-300: #64B5F6;
-  --blue-400: #42A5F5;
-  --blue-500: #2196F3;
-  --blue-600: #1E88E5;
-  --blue-700: #1976D2;
-  --blue-800: #1565C0;
-  --blue-900: #0D47A1;
-
-  --green-50: #E8F5E9;
-  --green-100: #C8E6C9;
-  --green-200: #A5D6A7;
-  --green-300: #81C784;
-  --green-400: #66BB6A;
-  --green-500: #4CAF50;
-  --green-600: #43A047;
-  --green-700: #388E3C;
-  --green-800: #2E7D32;
-  --green-900: #1B5E20;
-
-  --red-50: #FFEBEE;
-  --red-100: #FFCDD2;
-  --red-200: #EF9A9A;
-  --red-300: #E57373;
-  --red-400: #EF5350;
-  --red-500: #F44336;
-  --red-600: #E53935;
-  --red-700: #D32F2F;
-  --red-800: #C62828;
-  --red-900: #B71C1C;
-
+  --blue-50: #e3f2fd;
+  --blue-100: #bbdefb;
+  --blue-200: #90caf9;
+  --blue-300: #64b5f6;
+  --blue-400: #42a5f5;
+  --blue-500: #2196f3;
+  --blue-600: #1e88e5;
+  --blue-700: #1976d2;
+  --blue-800: #1565c0;
+  --blue-900: #0d47a1;
+  --green-50: #e8f5e9;
+  --green-100: #c8e6c9;
+  --green-200: #a5d6a7;
+  --green-300: #81c784;
+  --green-400: #66bb6a;
+  --green-500: #4caf50;
+  --green-600: #43a047;
+  --green-700: #388e3c;
+  --green-800: #2e7d32;
+  --green-900: #1b5e20;
+  --red-50: #ffebee;
+  --red-100: #ffcdd2;
+  --red-200: #ef9a9a;
+  --red-300: #e57373;
+  --red-400: #ef5350;
+  --red-500: #f44336;
+  --red-600: #e53935;
+  --red-700: #d32f2f;
+  --red-800: #c62828;
+  --red-900: #b71c1c;
   --border-radius-300: 2px;
   --border-radius-400: 3px;
   --border-radius-500: 4px;
-
   --distance-100: 1px;
   --distance-200: 2px;
   --distance-300: 3px;
@@ -58,7 +52,6 @@
   --distance-700: 20px;
   --distance-800: 25px;
   --distance-900: 30px;
-
   --text-100: 8px;
   --text-200: 10px;
   --text-300: 12px;
@@ -68,10 +61,8 @@
   --text-700: 20px;
   --text-800: 24px;
   --text-900: 28px;
-
   --text-height-500: 24px;
   --text-height-600: 26px;
   --text-height-700: 30px;
-
-  --shadow-default: rgba(0,0,0,.2);
+  --shadow-default: rgba(0, 0, 0, 0.2);
 }
