--- a/src/client/components/common/toast/toast.styles.pcss
+++ b/src/client/components/common/toast/toast.styles.pcss
@@ -13,7 +13,7 @@
   display: flex;
   align-items: flex-start;
   width: 300px;
-  box-shadow: 3px 3px 10px 0px rgba(0,0,0,.35);
+  box-shadow: 3px 3px 10px 0 rgba(0, 0, 0, 0.35);
   margin-bottom: var(--distance-700);
   cursor: pointer;
 
