[+] Profile: add ability to edit profile info

--- a/src/client/styles.pcss
+++ b/src/client/styles.pcss
@@ -8,3 +8,12 @@ body {
   color: var(--grey-800);
   font-size: var(--text-500);
 }
+
+.poster-hidden {
+  transition: all 0.5s;
+  opacity: 0 !important;
+}
+
+.poster-none {
+  display: none !important;
+}
