--- a/src/client/components/layout/components/header.styles.pcss
+++ b/src/client/components/layout/components/header.styles.pcss
@@ -20,11 +20,11 @@
   cursor: pointer;
   position: relative;
 
-  & .user-btn {
+  .user-btn {
     outline: none;
   }
 
-  & .menu {
+  .menu {
     position: absolute;
     width: 170px;
     display: none;
