[*] Update design of the header and home page

--- a/src/client/components/common/button/button.styles.pcss
+++ b/src/client/components/common/button/button.styles.pcss
@@ -20,10 +20,10 @@
   }
 
   &.blue {
-    background: var(--blue-600);
+    background: var(--light-blue-600);
 
     &:hover {
-      background: var(--blue-800);
+      background: var(--light-blue-800);
     }
   }
 
