--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Index HTML</title>
+    <link rel="shortcut icon" href="/static/favicon.ico" />
   </head>
   <body>
     {{#unless isDev}}
