--- a/src/client/styles.pcss
+++ b/src/client/styles.pcss
@@ -7,6 +7,7 @@ body {
   font-family: 'Open Sans', sans-serif;
   color: var(--grey-800);
   font-size: var(--text-500);
+  line-height: var(--text-700);
 }
 
 .poster-hidden {
