--- a/src/client/styles/variables.pcss
+++ b/src/client/styles/variables.pcss
@@ -1,59 +1,21 @@
+@import 'colors/deep-purple.pcss';
+@import 'colors/green.pcss';
+@import 'colors/grey.pcss';
+@import 'colors/light-blue.pcss';
+@import 'colors/orange.pcss';
+@import 'colors/red.pcss';
+
 :root {
   --white: #fff;
   --black: #000;
-  --grey-50: #fafafa;
-  --grey-100: #f5f5f5;
-  --grey-200: #eee;
-  --grey-300: #e0e0e0;
-  --grey-400: #bdbdbd;
-  --grey-500: #9e9e9e;
-  --grey-600: #757575;
-  --grey-700: #616161;
-  --grey-800: #424242;
-  --grey-900: #212121;
-  --blue-50: #e3f2fd;
-  --blue-100: #bbdefb;
-  --blue-200: #90caf9;
-  --blue-300: #64b5f6;
-  --blue-400: #42a5f5;
-  --blue-500: #2196f3;
-  --blue-600: #1e88e5;
-  --blue-700: #1976d2;
-  --blue-800: #1565c0;
-  --blue-900: #0d47a1;
-  --green-50: #e8f5e9;
-  --green-100: #c8e6c9;
-  --green-200: #a5d6a7;
-  --green-300: #81c784;
-  --green-400: #66bb6a;
-  --green-500: #4caf50;
-  --green-600: #43a047;
-  --green-700: #388e3c;
-  --green-800: #2e7d32;
-  --green-900: #1b5e20;
-  --red-50: #ffebee;
-  --red-100: #ffcdd2;
-  --red-200: #ef9a9a;
-  --red-300: #e57373;
-  --red-400: #ef5350;
-  --red-500: #f44336;
-  --red-600: #e53935;
-  --red-700: #d32f2f;
-  --red-800: #c62828;
-  --red-900: #b71c1c;
-  --orange-50: #fff3e0;
-  --orange-100: #ffe0b2;
-  --orange-200: #ffcc80;
-  --orange-300: #ffb74d;
-  --orange-400: #ffa726;
-  --orange-500: #ff9800;
-  --orange-600: #fb8c00;
-  --orange-700: #f57c00;
-  --orange-800: #ef6c00;
-  --orange-900: #e65100;
+  --border-radius-200: 1px;
   --border-radius-300: 2px;
   --border-radius-400: 3px;
   --border-radius-500: 4px;
+  --border-radius-600: 6px;
+  --border-radius-700: 8px;
+  --border-radius-800: 10px;
+  --border-radius-900: 14px;
   --distance-100: 1px;
   --distance-200: 2px;
   --distance-300: 3px;
@@ -72,8 +34,20 @@
   --text-700: 20px;
   --text-800: 24px;
   --text-900: 28px;
+  --text-1000: 34px;
+  --text-1100: 40px;
+  --text-weight-100: 100;
+  --text-weight-200: 200;
+  --text-weight-300: 300;
+  --text-weight-400: 400;
+  --text-weight-500: 500;
+  --text-weight-600: 600;
+  --text-weight-700: 700;
+  --text-weight-800: 800;
+  --text-weight-900: 900;
   --text-height-500: 24px;
   --text-height-600: 26px;
   --text-height-700: 30px;
   --shadow-default: rgba(0, 0, 0, 0.2);
+  --transition-duration-500: 0.5s;
 }
