[*] Fix build on windows environment

--- a/src/client/components/layout/components/header/components/menu/menu.styles.pcss
+++ b/src/client/components/layout/components/header/components/menu/menu.styles.pcss
@@ -28,7 +28,7 @@
     position: absolute;
     height: 3px;
     border-radius: 1px;
-    background: #fff;
+    background: var(--white);
     left: 0;
     right: 0;
     bottom: 0;
