--- a/src/client/styles.pcss
+++ b/src/client/styles.pcss
@@ -1,14 +1,4 @@
-@import 'variables.pcss';
-@import "normalize.css";
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800');
-
-html,
-body {
-  font-family: 'Open Sans', sans-serif;
-  color: var(--grey-800);
-  font-size: var(--text-500);
-  line-height: var(--text-700);
-}
+@import 'global.pcss';
 
 .poster-hidden {
   transition: all 0.5s;
