--- a/src/client/styles/variables.pcss
+++ b/src/client/styles/variables.pcss
@@ -1,13 +1,6 @@
-@import 'colors/deep-purple.pcss';
-@import 'colors/green.pcss';
-@import 'colors/grey.pcss';
-@import 'colors/light-blue.pcss';
-@import 'colors/orange.pcss';
-@import 'colors/red.pcss';
+@import 'colors/all.pcss';
 
 :root {
-  --white: #fff;
-  --black: #000;
   --border-radius-200: 1px;
   --border-radius-300: 2px;
   --border-radius-400: 3px;
