--- a/src/client/styles/variables.pcss
+++ b/src/client/styles/variables.pcss
@@ -9,6 +9,7 @@
   --border-radius-700: 8px;
   --border-radius-800: 10px;
   --border-radius-900: 14px;
+  --border-radius-1000: 18px;
   --distance-100: 1px;
   --distance-200: 2px;
   --distance-300: 3px;
