Update main layout - allow to use full space of content. Add simple 404 page

--- a/src/client/components/layout/layout.styles.pcss
+++ b/src/client/components/layout/layout.styles.pcss
@@ -4,7 +4,12 @@
   flex-direction: column;
 }
 
-.content {
+.main {
   padding: 20px;
   flex: 1;
+  display: flex;
+}
+
+.content {
+  width: 100%;
 }
