Include signin/signup pages to web app

--- a/src/client/components/button/button.styles.pcss
+++ b/src/client/components/button/button.styles.pcss
@@ -1,6 +1,7 @@
 @import 'variables.pcss';
 
 .button {
+  border: 0;
   display: inline-block;
   border-radius: var(--border-radius-500);
   padding: var(--distance-500) var(--distance-600);
