--- a/src/client/styles/global.pcss
+++ b/src/client/styles/global.pcss
@@ -1,11 +1,17 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800');
 @import 'normalize.css';
 @import 'variables.pcss';
 
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
 html,
 body {
-  font-family: 'Open Sans', sans-serif;
-  color: var(--grey-800);
-  font-size: var(--text-500);
-  line-height: var(--text-700);
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  color: #222;
+  font-size: 16px;
+  line-height: 1.4;
+  box-sizing: border-box;
 }
