--- a/src/client/components/form/components/row/row.styles.pcss
+++ b/src/client/components/form/components/row/row.styles.pcss
@@ -1,11 +1,9 @@
-@import 'variables.pcss';
-
 .row {
   display: flex;
   flex-flow: row wrap;
-  margin: 0 calc(var(--distance-600) / -2);
+  margin: 0 calc(15px / -2);
 
   &:last-of-type {
-    margin-bottom: calc(var(--distance-600) / -2);
+    margin-bottom: calc(15px / -2);
   }
 }
