--- a/src/client/pages/home/home.styles.pcss
+++ b/src/client/pages/home/home.styles.pcss
@@ -1,40 +1,38 @@
-@import 'variables.pcss';
-
 .title {
-  font-size: var(--text-800);
+  font-size: 24px;
   margin-top: 0;
 }
 
 .meeting {
-  border: 1px solid var(--grey-100);
+  border: 1px solid #616161;
   box-sizing: border-box;
   box-shadow: 0 2px 20px rgba(0, 0, 0, 0.1);
-  margin: var(--distance-700) 0;
-  padding: var(--distance-500) var(--distance-600);
+  margin: 20px 0;
+  padding: 10px 15px;
   cursor: pointer;
 }
 
 .time {
-  font-weight: var(--text-weight-600);
-  color: var(--light-blue-600);
+  font-weight: 600;
+  color: #039be5;
   display: inline-flex;
   align-items: center;
 
   span {
-    margin-left: var(--distance-400);
+    margin-left: 5px;
   }
 }
 
 .description {
-  margin: var(--distance-500) 0;
-  font-size: var(--text-400);
+  margin: 10px 0;
+  font-size: 14px;
 }
 
 .participants-title {
-  font-size: var(--text-400);
-  margin-bottom: var(--distance-500);
+  font-size: 14px;
+  margin-bottom: 10px;
 }
 
 .participants-list {
-  margin-top: var(--distance-500);
+  margin-top: 10px;
 }
