--- a/src/components/loading/loading.styles.pcss
+++ b/src/components/loading/loading.styles.pcss
@@ -4,7 +4,7 @@
   --dark-color: #212121;
 }
 
-.cube-folding {
+.cubeFolding {
   width: var(--size);
   height: var(--size);
   display: inline-block;
@@ -80,7 +80,7 @@
   }
 }
 
-.cube-wrapper {
+.cubeWrapper {
   position: fixed;
   left: 50%;
   top: 50%;
