--- a/src/styles/constants.pcss
+++ b/src/styles/constants.pcss
@@ -6,6 +6,7 @@
   --gray-light: #f9f9f9;
   --gray-dark: #808080;
   --blue: #0064eb;
+  --hover-blue: #0156c9;
   --green: #219653;
   --red: #eb5757;
   --yellow: #f2c94c;
