--- a/src/styles/main.pcss
+++ b/src/styles/main.pcss
@@ -1,5 +1,6 @@
 @import 'normalize.css';
 @import 'constants.pcss';
+@import './fonts/inter.pcss';
 
 *,
 *::before,
@@ -9,7 +10,7 @@
 
 html,
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: Inter, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   color: #222;
   font-size: 16px;
   line-height: 1.4;
