--- a/src/components/multi-select/multi-select.styles.pcss
+++ b/src/components/multi-select/multi-select.styles.pcss
@@ -9,6 +9,7 @@
   font-size: 12px;
   word-wrap: break-word;
   font-weight: normal;
+  margin-top: 5px;
 }
 
 .title {
@@ -19,6 +20,7 @@
   &.error {
     color: var(--red);
     font-size: 14px;
+    margin: 0;
   }
 }
 
@@ -49,11 +51,5 @@
 
   [class$='-control--is-focused'] {
     border-color: var(--blue);
-  }
-}
-
-.select_error {
-  [class$='-control']:hover {
-    border-color: var(--red);
   }
 }
