Add navigation components

--- a/src/components/button-menu/button-menu.styles.pcss
+++ b/src/components/button-menu/button-menu.styles.pcss
@@ -1,10 +1,12 @@
 .root {
+  position: relative;
   width: fit-content;
-  height: 114px;
+  height: 40px;
   box-sizing: border-box;
 }
 
 .menu {
+  position: absolute;
   display: flex;
   flex-direction: column;
   width: 100%;
