Add Form component

--- a/src/components/checkbox/checkbox.styles.pcss
+++ b/src/components/checkbox/checkbox.styles.pcss
@@ -1,11 +1,8 @@
 .container {
-  align-items: flex-start;
-  flex-direction: column;
-  text-align: center;
-  padding: 0;
-  border: 0;
   display: flex;
+  align-items: center;
   background: transparent;
+  border: none;
 }
 
 .disabled {
@@ -21,8 +18,10 @@
 .label {
   display: inline-flex;
   align-items: center;
-  user-select: none;
+  font-size: 14px;
+  margin-right: 5px;
   transition: all 0.2s;
+  cursor: pointer;
 
   &::before {
     width: 20px;
@@ -38,10 +37,6 @@
     background-size: 12px 9px;
     background-color: var(--white);
     background-image: url("data:image/svg+xml,%3Csvg width='14' height='10' viewBox='0 0 14 10' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M12.7763 0.501775C13.0514 0.746387 13.0762 1.16777 12.8316 1.44296L5.7205 9.44296C5.59399 9.58528 5.41265 9.66671 5.22223 9.66671C5.0318 9.66671 4.85047 9.58528 4.72396 9.44296L1.1684 5.44296C0.923789 5.16777 0.948576 4.74639 1.22376 4.50177C1.49895 4.25716 1.92033 4.28195 2.16495 4.55714L5.22223 7.99658L11.8351 0.557139C12.0797 0.28195 12.5011 0.257163 12.7763 0.501775Z' fill='white' stroke='white' stroke-width='0.6' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E%0A");
-  }
-
-  &:hover {
-    cursor: pointer;
   }
 }
 
