--- a/src/components/textarea/textarea.styles.pcss
+++ b/src/components/textarea/textarea.styles.pcss
@@ -1,6 +1,7 @@
 .input {
   height: 80px;
   width: 100%;
+  min-width: 200px;
   background: var(--white);
   border: 1px solid var(--gray);
   box-sizing: border-box;
