--- a/src/components/search-input/search-input.styles.pcss
+++ b/src/components/search-input/search-input.styles.pcss
@@ -1,6 +1,7 @@
 .input {
   height: 40px;
   width: 100%;
+  min-width: 200px;
   background: var(--white);
   border: 1px solid var(--gray);
   box-sizing: border-box;
