Rewrite forms with Form component

--- a/src/pages/profile/profile.styles.pcss
+++ b/src/pages/profile/profile.styles.pcss
@@ -1,3 +1,13 @@
 .button {
   margin-right: 10px;
 }
+
+.row {
+  margin-top: 16px;
+  width: 400px;
+}
+
+.buttons {
+  display: flex;
+  margin: 25px 0;
+}
