add file upload functionality (update avatar)

--- a/src/pages/profile/profile.styles.pcss
+++ b/src/pages/profile/profile.styles.pcss
@@ -11,3 +11,11 @@
   display: flex;
   margin: 25px 0;
 }
+
+.avatar {
+  display: block;
+  width: 100px;
+  height: 100px;
+  margin: 4px 0 8px;
+  object-fit: cover;
+}
