--- a/src/components/banner/banner.styles.pcss
+++ b/src/components/banner/banner.styles.pcss
@@ -27,6 +27,10 @@
 .button {
   && {
     background-color: var(--white);
+
+    &:hover {
+      background-color: var(--gray);
+    }
   }
 
   &.success {
@@ -44,6 +48,10 @@
   &.warning {
     background-color: var(--black);
     color: var(--yellow);
+
+    &:hover {
+      background-color: var(--gray-dark);
+    }
   }
 }
 
