--- a/src/components/button-link/button-link.styles.pcss
+++ b/src/components/button-link/button-link.styles.pcss
@@ -12,6 +12,7 @@
   display: inline-flex;
   align-items: center;
   font-size: 14px;
+  color: var(--blue);
 
   &:hover {
     color: var(--hover-blue);
