--- a/src/components/icon-button/icon-button.styles.pcss
+++ b/src/components/icon-button/icon-button.styles.pcss
@@ -11,7 +11,7 @@
   cursor: pointer;
 
   &:hover {
-    background: var(--gray-light);
+    background: rgba(249, 249, 249, 0.2);
     color: #3f3f3f;
   }
 
