--- a/src/components/multi-select/multi-select.styles.pcss
+++ b/src/components/multi-select/multi-select.styles.pcss
@@ -2,6 +2,10 @@
   position: relative;
   display: flex;
   flex-direction: column;
+
+  >:first-child {
+    margin: 2px 0 1px 0;
+  }
 }
 
 .error {
