--- a/src/components/select/select.styles.pcss
+++ b/src/components/select/select.styles.pcss
@@ -4,6 +4,10 @@
   flex-direction: column;
   font-size: 14px;
 
+  >:first-child {
+    margin: 2px 0 1px 0;
+  }
+
   &:focus-within {
     color: var(--blue);
   }
