--- a/src/components/input/input.styles.pcss
+++ b/src/components/input/input.styles.pcss
@@ -2,12 +2,16 @@
   height: 40px;
   width: 100%;
   min-width: 200px;
+  margin-top: 5px;
+  padding: 0 14px;
   background: var(--white);
   border: 1px solid var(--gray);
   box-sizing: border-box;
   border-radius: 6px;
   outline: none;
-  padding: 0 14px;
+  font-size: 14px;
+  line-height: 17px;
+  transition: all 0.2s ease-in-out;
 
   &:focus {
     border: 1px solid var(--blue);
@@ -18,7 +22,7 @@
   }
 
   &::placeholder {
-    color: var(--gray);
+    color: var(--gray-dark);
   }
 
   &.error {
@@ -51,9 +55,10 @@ label:focus-within:not(.disabled) {
 }
 
 .label {
-  margin-bottom: 4px;
   font-weight: 500;
+  line-height: 17px;
   font-size: 14px;
+  transition: all 0.1s ease-in-out;
 
   &.error {
     color: var(--red) !important;
