--- a/src/components/select/select.styles.pcss
+++ b/src/components/select/select.styles.pcss
@@ -14,13 +14,16 @@
 }
 
 .select {
+  margin-top: 5px;
   outline: none;
   transition: all 0.2s;
-  margin: 0;
 
   [class$='-control'] {
     width: 100%;
     min-width: 200px;
+    max-height: 40px;
+    display: flex;
+    align-items: flex-start;
   }
 
   [class$='-control']:hover {
@@ -32,29 +35,35 @@
     border-color: var(--blue);
   }
 
+  [class$='-ValueContainer'] {
+    padding: 5px 12px;
+  }
+
   [class$='-control--menu-is-open'] {
     border-color: var(--blue);
   }
 
   [class$='-placeholder'] {
-    color: var(--gray);
+    color: var(--gray-dark);
   }
 
   [class$='-control--is-focused'] {
     border-color: var(--blue);
   }
+
+  &.error {
+    [class$='-control']:hover {
+      border-color: var(--red) !important;
+    }
+  }
 }
 
 .error {
+  margin-top: 5px;
   color: var(--red);
   word-wrap: break-word;
   font-weight: normal;
   font-size: 12px;
-  margin-top: 5px;
-
-  [class$='-control']:hover {
-    border-color: var(--red) !important;
-  }
 }
 
 .title {
@@ -64,6 +73,5 @@
 
   &.error {
     color: var(--red);
-    margin: 0;
   }
 }
