--- a/src/components/multi-select/multi-select.styles.pcss
+++ b/src/components/multi-select/multi-select.styles.pcss
@@ -8,8 +8,56 @@
   }
 }
 
-.error {
-  margin-top: 5px;
+.select {
+  margin-top: 6px;
+  outline: none;
+  transition: all 0.2s ease-in-out;
+
+  [class$='-control'] {
+    width: 100%;
+    min-width: 200px;
+    display: flex;
+    align-items: flex-start;
+  }
+
+  [class$='-control']:hover {
+    border-color: var(--gray);
+  }
+
+  [class$='-control']:active,
+  [class$='-control']:focus {
+    border-color: var(--blue);
+  }
+
+  [class$='-ValueContainer'] {
+    padding: 8px 12px 2px 12px;
+  }
+
+  [class$='-control--menu-is-open'] {
+    border-color: var(--blue);
+  }
+
+  [class$='-placeholder'] {
+    color: var(--gray-dark);
+  }
+
+  [class$='-control--is-focused'] {
+    border-color: var(--blue);
+  }
+
+  [class$='multi-value'] {
+    margin: 0 6px 6px 0;
+  }
+
+  &.error {
+    [class$='-control']:hover {
+      border-color: var(--red) !important;
+    }
+  }
+}
+
+.errorMessage {
+  margin-top: 4px;
   color: var(--red);
   font-size: 12px;
   word-wrap: break-word;
@@ -27,56 +75,11 @@
   }
 }
 
-.select {
-  margin-top: 5px;
-  outline: none;
-  transition: all 0.2s;
-
-  [class$='-control'] {
-    width: 100%;
-    min-width: 200px;
-    max-height: 40px;
-    display: flex;
-    align-items: flex-start;
-  }
-
-  [class$='-control']:hover {
-    border-color: var(--gray);
-  }
-
-  [class$='-control']:active,
-  [class$='-control']:focus {
-    border-color: var(--blue);
-  }
-
-  [class$='-ValueContainer'] {
-    padding: 5px 12px;
-  }
-
-  [class$='-control--menu-is-open'] {
-    border-color: var(--blue);
-  }
-
-  [class$='-placeholder'] {
-    color: var(--gray-dark);
-  }
-
-  [class$='-control--is-focused'] {
-    border-color: var(--blue);
-  }
-
-  &.error {
-    [class$='-control']:hover {
-      border-color: var(--red) !important;
-    }
-  }
-}
-
 .selectLabel {
   font-weight: 500;
   line-height: 17px;
   font-size: 14px;
-  transition: all 0.1s ease-in-out;
+  transition: all 0.2s ease-in-out;
 
   &.error {
     color: var(--red) !important;
