--- a/src/components/select/select.styles.pcss
+++ b/src/components/select/select.styles.pcss
@@ -14,7 +14,7 @@
 }
 
 .select {
-  margin-top: 5px;
+  margin-top: 6px;
   outline: none;
   transition: all 0.2s;
 
@@ -36,7 +36,7 @@
   }
 
   [class$='-ValueContainer'] {
-    padding: 5px 12px;
+    padding: 6px 12px;
   }
 
   [class$='-control--menu-is-open'] {
@@ -64,8 +64,8 @@
   }
 }
 
-.error {
-  margin-top: 5px;
+.errorMessage {
+  margin-top: 6px;
   color: var(--red);
   word-wrap: break-word;
   font-weight: normal;
