--- a/src/components/icon-button/icon-button.styles.pcss
+++ b/src/components/icon-button/icon-button.styles.pcss
@@ -1,22 +1,22 @@
-.button {
+.iconButton {
+  padding: 4px;
+  border: 0;
+  border-radius: 50%;
   display: flex;
-  align-items: center;
   justify-content: center;
-  width: 32px;
-  height: 32px;
-  background: transparent;
-  border: none;
-  border-radius: 25px;
+  align-items: center;
   color: var(--gray-dark);
   cursor: pointer;
+  background-color: transparent;
+  transition: all 0.2s ease-in-out;
 
   &:hover {
-    background: rgba(249, 249, 249, 0.2);
+    background-color: var(--gray-light);
     color: #3f3f3f;
   }
 
-  &.disabled {
-    color: var(--gray);
-    pointer-events: none;
+  &:disabled {
+    cursor: default;
+    opacity: 0.5;
   }
 }
