feat: fix icon button in other component

--- a/src/components/icon-button/icon-button.styles.pcss
+++ b/src/components/icon-button/icon-button.styles.pcss
@@ -1,5 +1,5 @@
 .iconButton {
-  padding: 4px;
+  padding: 0;
   border: 0;
   border-radius: 50%;
   display: flex;
@@ -20,4 +20,16 @@
     cursor: default;
     opacity: 0.5;
   }
+}
+
+.m {
+  height: 32px;
+  width: 32px;
+  padding: 4px;
+}
+
+.s {
+  height: 20px;
+  width: 20px;
+  padding: 2px;
 }
