feat: improve text area component

--- a/src/components/multi-select/multi-select.styles.pcss
+++ b/src/components/multi-select/multi-select.styles.pcss
@@ -71,11 +71,11 @@
 }
 
 .errorMessage {
-  margin-top: 4px;
+  margin-top: 2px;
   color: var(--red);
   font-size: 12px;
+  line-height: 15px;
   word-wrap: break-word;
-  font-weight: normal;
 }
 
 .title {
