--- a/src/components/select/select.styles.pcss
+++ b/src/components/select/select.styles.pcss
@@ -65,11 +65,11 @@
 }
 
 .errorMessage {
-  margin-top: 6px;
+  margin-top: 2px;
   color: var(--red);
-  word-wrap: break-word;
-  font-weight: normal;
   font-size: 12px;
+  line-height: 15px;
+  word-wrap: break-word;
 }
 
 .title {
