feat: add typography

--- a/src/styles/main.pcss
+++ b/src/styles/main.pcss
@@ -1,4 +1,4 @@
-@import 'normalize.css';
+@import 'normalize.pcss';
 @import 'constants.pcss';
 @import './fonts/inter.pcss';
 
@@ -15,4 +15,28 @@ body {
   font-size: 16px;
   line-height: 1.4;
   box-sizing: border-box;
+}
+
+h1 {
+  margin: 0;
+  font-weight: bold;
+  font-size: 36px;
+  line-height: 44px;
+  color: var(--black);
+}
+
+h2 {
+  margin: 0;
+  font-weight: bold;
+  font-size: 26px;
+  line-height: 31px;
+  color: var(--black);
+}
+
+h3 {
+  margin: 0;
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 24px;
+  color: var(--black);
 }
