--- a/src/components/Checkbox/Checkbox.pcss
+++ b/src/components/Checkbox/Checkbox.pcss
@@ -1,12 +1,16 @@
 .container {
+  padding: 0;
+  border: 0;
+  min-width: 80px;
   display: flex;
-  align-items: center;
-  background: transparent;
-  border: none;
-}
+  align-items: flex-start;
+  flex-direction: column;
+  text-align: center;
+  background: var(--white);
 
-.disabled {
-  pointer-events: none;
+  &.disabled {
+    pointer-events: none;
+  }
 }
 
 .checkbox {
@@ -15,57 +19,55 @@
   opacity: 0;
 }
 
-.label {
+.checkboxText {
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 17px;
+}
+
+.checkboxLabel {
   display: inline-flex;
   align-items: center;
-  font-size: 14px;
-  margin-right: 5px;
-  transition: all 0.2s;
+  user-select: none;
   cursor: pointer;
+  transition: all 0.2s ease-in-out;
 
   &::before {
+    content: '';
     width: 20px;
     height: 20px;
     margin-right: 8px;
     border: 1px solid var(--gray);
     border-radius: 4px;
     box-sizing: border-box;
-    content: '';
-    transition: all 0.2s;
+    transition: all 0.2s ease-in-out;
     background-repeat: no-repeat;
     background-position: center center;
-    background-size: 12px 9px;
-    background-color: var(--white);
-    background-image: url("data:image/svg+xml,%3Csvg width='14' height='10' viewBox='0 0 14 10' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M12.7763 0.501775C13.0514 0.746387 13.0762 1.16777 12.8316 1.44296L5.7205 9.44296C5.59399 9.58528 5.41265 9.66671 5.22223 9.66671C5.0318 9.66671 4.85047 9.58528 4.72396 9.44296L1.1684 5.44296C0.923789 5.16777 0.948576 4.74639 1.22376 4.50177C1.49895 4.25716 1.92033 4.28195 2.16495 4.55714L5.22223 7.99658L11.8351 0.557139C12.0797 0.28195 12.5011 0.257163 12.7763 0.501775Z' fill='white' stroke='white' stroke-width='0.6' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E%0A");
+    background-size: 12px 10px;
   }
 }
 
-.checkbox:disabled + .label {
+.checkbox:disabled + .checkboxLabel {
   opacity: 0.3;
+
+  &::before {
+    background-image: none;
+    background-color: var(--gray);
+    border: 1px solid var(--gray-dark);
+  }
 }
 
-.checkbox.disabled:checked + .label::before {
-  border-color: var(--gray-dark);
-  background-color: var(--gray-dark);
-}
-
-.checkbox:not(.disabled):checked + .label::before {
+.checkbox:checked + .checkboxLabel::before {
   border-color: var(--black);
   background-color: var(--black);
+  background-image: url("data:image/svg+xml,%3Csvg width='12' height='10' viewBox='0 0 12 10' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M11.7763 0.501723C12.0514 0.746335 12.0762 1.16772 11.8316 1.44291L4.7205 9.4429C4.59399 9.58523 4.41265 9.66666 4.22223 9.66666C4.0318 9.66666 3.85047 9.58523 3.72396 9.4429L0.168401 5.4429C-0.0762111 5.16772 -0.051424 4.74634 0.223765 4.50172C0.498953 4.25711 0.920335 4.2819 1.16495 4.55709L4.22223 7.99653L10.8351 0.557087C11.0797 0.281899 11.5011 0.257111 11.7763 0.501723Z' fill='white'/%3E%3C/svg%3E%0A");
 }
 
-.checkbox:not(.disabled):checked + .label:hover::before {
-  border-color: #ffffff4c;
-  background-color: var(--black);
-  box-shadow: inset 0 44px 4px #ffffff4c;
-}
-
-.checkbox:not(:disabled):not(:checked) + .label:hover::before {
+.checkbox:not(:disabled):not(:checked) + .checkboxLabel:hover::before {
   border-color: var(--black);
   background-image: none;
 }
 
-.checkbox:disabled:not(:checked) + .label:disabled::before {
-  border-color: var(--gray-light);
-  background-image: none;
+.checkbox:not(:disabled):checked + .checkboxLabel:hover::before {
+  opacity: 0.7;
 }
