--- a/src/components/Checkbox/Checkbox.pcss
+++ b/src/components/Checkbox/Checkbox.pcss
@@ -13,18 +13,6 @@
   }
 }
 
-.checkbox {
-  position: absolute;
-  z-index: -1;
-  opacity: 0;
-}
-
-.checkboxText {
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 17px;
-}
-
 .checkboxLabel {
   display: inline-flex;
   align-items: center;
@@ -47,27 +35,39 @@
   }
 }
 
-.checkbox:disabled + .checkboxLabel {
-  opacity: 0.3;
+.checkbox {
+  position: absolute;
+  z-index: -1;
+  opacity: 0;
 
-  &::before {
+  &:disabled + .checkboxLabel {
+    opacity: 0.3;
+
+    &::before {
+      background-image: none;
+      background-color: var(--gray);
+      border: 1px solid var(--gray-dark);
+    }
+  }
+
+  &:checked + .checkboxLabel::before {
+    border-color: var(--black);
+    background-color: var(--black);
+    background-image: url("data:image/svg+xml,%3Csvg width='12' height='10' viewBox='0 0 12 10' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M11.7763 0.501723C12.0514 0.746335 12.0762 1.16772 11.8316 1.44291L4.7205 9.4429C4.59399 9.58523 4.41265 9.66666 4.22223 9.66666C4.0318 9.66666 3.85047 9.58523 3.72396 9.4429L0.168401 5.4429C-0.0762111 5.16772 -0.051424 4.74634 0.223765 4.50172C0.498953 4.25711 0.920335 4.2819 1.16495 4.55709L4.22223 7.99653L10.8351 0.557087C11.0797 0.281899 11.5011 0.257111 11.7763 0.501723Z' fill='white'/%3E%3C/svg%3E%0A");
+  }
+
+  &:not(:disabled):not(:checked) + .checkboxLabel:hover::before {
+    border-color: var(--black);
     background-image: none;
-    background-color: var(--gray);
-    border: 1px solid var(--gray-dark);
+  }
+
+  &:not(:disabled):checked + .checkboxLabel:hover::before {
+    opacity: 0.7;
   }
 }
 
-.checkbox:checked + .checkboxLabel::before {
-  border-color: var(--black);
-  background-color: var(--black);
-  background-image: url("data:image/svg+xml,%3Csvg width='12' height='10' viewBox='0 0 12 10' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M11.7763 0.501723C12.0514 0.746335 12.0762 1.16772 11.8316 1.44291L4.7205 9.4429C4.59399 9.58523 4.41265 9.66666 4.22223 9.66666C4.0318 9.66666 3.85047 9.58523 3.72396 9.4429L0.168401 5.4429C-0.0762111 5.16772 -0.051424 4.74634 0.223765 4.50172C0.498953 4.25711 0.920335 4.2819 1.16495 4.55709L4.22223 7.99653L10.8351 0.557087C11.0797 0.281899 11.5011 0.257111 11.7763 0.501723Z' fill='white'/%3E%3C/svg%3E%0A");
-}
-
-.checkbox:not(:disabled):not(:checked) + .checkboxLabel:hover::before {
-  border-color: var(--black);
-  background-image: none;
-}
-
-.checkbox:not(:disabled):checked + .checkboxLabel:hover::before {
-  opacity: 0.7;
+.checkboxText {
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 17px;
 }
