--- a/src/components/SegmentedControl/SegmentedControl.pcss
+++ b/src/components/SegmentedControl/SegmentedControl.pcss
@@ -1,22 +1,66 @@
 .container {
   max-width: fit-content;
-  padding: 3px;
+  position: relative;
+  padding: 3px 1px 3px 3px;
   border: 1px solid var(--gray);
   border-radius: 3px;
-  display: flex;
+}
+
+.innerContainer {
+  position: relative;
+  display: grid;
+  grid-auto-columns: 1fr;
 }
 
 .segment {
-  border-radius: 4px;
   padding: 6px 16px;
+  margin-right: 2px;
+  border-radius: 4px;
+  grid-row: 1;
   display: flex;
   justify-content: center;
   align-items: center;
   font-size: 14px;
   line-height: 21px;
+  clear: both;
+  overflow: hidden;
+  white-space: nowrap;
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+
+  &:last-child {
+    margin-right: 0;
+  }
+
+  &:not(.active):hover {
+    background-color: var(--gray-light);
+  }
 
   &.active {
-    background-color: var(--black);
+    color: var(--white);
+    animation: changeToInverseColor 0.3s ease-in-out;
+  }
+}
+
+@keyframes changeToInverseColor {
+  0% {
+    color: var(--black);
+  }
+
+  30% {
+    color: var(--black);
+  }
+
+  100% {
     color: var(--white);
   }
+}
+
+.segment_mask {
+  height: 100%;
+  position: absolute;
+  background-color: var(--black);
+  z-index: -1;
+  border-radius: 4px;
+  transition: all 0.3s cubic-bezier(0.65, 0.05, 0.36, 1);
 }
