--- a/src/components/DatePicker/DatePicker.pcss
+++ b/src/components/DatePicker/DatePicker.pcss
@@ -1,12 +1,3 @@
-.container {
-  position: relative;
-  background: var(--white);
-  box-sizing: border-box;
-  border-radius: 8px;
-  height: 100%;
-  min-width: 200px;
-}
-
 .container > div > div {
   background: var(--white);
   border: none;
@@ -14,53 +5,64 @@
 }
 
 .header {
+  padding: 8px 2px;
+  border-bottom: 1px solid var(--gray-light) !important;
+  border-radius: 0 !important;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding-bottom: 10px;
-  border-bottom: 1px solid var(--gray-light) !important;
-  border-radius: 0 !important;
-  color: var(--black);
   font-size: 14px;
   font-weight: 500;
   line-height: 20px;
+  color: var(--black);
 }
 
 .popper {
-  background: var(--white);
-  border: 1px solid var(--gray);
-  box-sizing: border-box;
-  border-radius: 8px;
   margin-top: 5px;
-}
-
-.selectedDay {
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-  height: 25px;
-  width: 25px;
-  border-radius: 25px !important;
-  background-color: var(--black) !important;
-  color: var(--white) !important;
-  font-weight: 300;
-  font-size: 14px;
+  padding: 0 !important;
+  border: 1px solid var(--gray);
+  border-radius: 8px;
+  background: var(--white);
 }
 
 .day {
+  height: 24px;
+  width: 24px;
+  margin: 2px 4px;
   display: inline-flex;
   align-items: center;
   justify-content: center;
-  height: 25px;
-  width: 25px;
-  border-radius: 25px;
+  border-radius: 50%;
   background-color: var(--white);
-  color: var(--black);
-  font-weight: 300;
   font-size: 14px;
+  font-weight: 400;
+  line-height: 20px;
+  color: var(--black);
+  transition: all 0.2s ease-in-out;
 
   &:hover {
-    border-radius: 25px;
+    border-radius: 50%;
+  }
+}
+
+.selectedDay {
+  height: 24px;
+  width: 24px;
+  margin: 2px 4px;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  background-color: var(--black) !important;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 20px;
+  color: var(--white);
+  transition: all 0.2s ease-in-out;
+
+  &:hover {
+    opacity: 0.7;
+    border-radius: 50%;
   }
 }
 
@@ -70,8 +72,9 @@
   justify-content: center;
   background-color: var(--white);
   color: var(--gray-dark);
-  font-weight: 300;
-  font-size: 14px;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 16px;
   margin-bottom: -5px;
 }
 
@@ -84,4 +87,18 @@
   top: 32px;
   right: 12px;
   color: var(--gray-dark);
+  cursor: pointer;
+  transition: all 0.2s ease-in-out;
+
+  &:hover {
+    color: var(--black);
+  }
+
+  &.active {
+    color: var(--black);
+  }
+
+  &.disabled {
+    pointer-events: none;
+  }
 }
