--- a/src/styles/main.pcss
+++ b/src/styles/main.pcss
@@ -2,19 +2,18 @@
 @import 'constants.pcss';
 @import './fonts/inter.pcss';
 
-*,
-*::before,
-*::after {
-  box-sizing: inherit;
+* {
+  box-sizing: border-box;
 }
 
 html,
 body {
+  padding: 0;
+  margin: 0;
   font-family: Inter, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   color: #222;
   font-size: 16px;
   line-height: 1.4;
-  box-sizing: border-box;
 }
 
 h1 {
