feat: improve text area component

--- a/src/components/Select/Select.pcss
+++ b/src/components/Select/Select.pcss
@@ -85,6 +85,10 @@
       padding: 8px 12px 2px 12px;
       max-height: none;
     }
+
+    [class$='-Input'] {
+      margin-top: -4px;
+    }
   }
 
   &.error {
